--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,23 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
+.header {
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  text-transform: uppercase;
+  font-family: 'Josefin Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  padding-top: 9px;
+  color: white;
+  height: 30px;
+  background-image: url("vector.png");
+  background-repeat: no-repeat;
+  background-size: 300px;
+  background-position: center;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.nav-container {
+  height: 190px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
