--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,12 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$red: #EC6465;
+$blue: #219CB8;
+$yellow: #F9B233;
+$blue-grey:#427885;
+$purple: #B9235C;
+$green: #64BA8B;
+$gray: #303030;
+$light-gray: #F9F9F9;
+$white: #FFFFFF;
