navbar and tags colors

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,19 +2,25 @@
   padding-top: 50px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 30px;
+  grid-gap: 50px;
   grid-auto-rows: minmax(100px, auto);
   text-align: center;
+  margin-left: 70px;
+  margin-right: 70px;
 }
 
 .card-img {
-  width: 300px;
-  height: 300px;
   object-fit:cover;
+  width: 100%;
+  height: 100%;
 }
 
 .card-tag a {
   text-decoration: none;
+}
+
+.card-box {
+  position: relative;
 }
 
 .card-tags-list {
@@ -22,4 +28,7 @@
   margin: 0;
   padding: 0;
   text-align: left;
+  position: absolute;
+  left: -25px;
+  top: -25px;
 }
