--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body class="container">
     <%= render "shared/navbar" %>
     <%= render "shared/gradient-bar" %>
+    <%# <%= render "shared/tags-bar" %>
     <%= render "shared/flashes" %>
     <%= yield %>
   </body>
