--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,23 +1,45 @@
-<h1><%= @post.title %></h1>
+<div class="show-container">
+  <div class="show_pics">
+    <% @post.photos.each do |photo| %>
+      <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+    <% end %>
+  </div>
+  <div class="show-fix">
+    <h1><%= @post.title %></h1>
 
-<% @post.photos.each do |photo| %>
-  <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
-  <%= "#{cl_image_tag photo.key, height: 300, width: 400, crop: :fill }" %>
-<% end %>
+    <% if @post.source %>
+      <h2>Description :</h2>
+      <p><%= @post.description %></p>
+    <% end %>
 
-<% @post.tag_list.each do |t| %>
-  <li><%= t %></li>
-<% end %>
+    <% if @post.source %>
+      <h2>Source :</h2>
+      <%= link_to @post.source do %>
+        <p><%= @post.source %></p>
+      <% end %>
+    <% end %>
 
-<p>
-<%= render inline: @post.content %>
-</p>
-
-<%= cl_image_tag @post.photos.last.key, height: 300, width: 400, crop: :fill %>
-
-<h3>Related Posts</h3>
-<ul>
-  <% @related_posts.each do |p| %>
-    <li><%= p.title %></li>
-  <% end %>
-</ul>
+    <% if @post.tag_list.count > 1 %>
+      <h2>Catégories :</h2>
+    <% else %>
+      <h3>Catégorie :</h3>
+    <% end %>
+    <% @post.tag_list.each do |t| %>
+      <% if t == "Fabrication" %>
+        <%= link_to tagged_path(tag: t) do %><h3 class="blue"><%= t %></h3><% end %>
+      <% end %>
+      <% if t == "Photographie" %>
+        <%= link_to tagged_path(tag: t) do %><h3 class="yellow"><%= t %></h3><% end %>
+      <% end %>
+      <% if t == "Graphisme" %>
+        <%= link_to tagged_path(tag: t) do %><h3 class="blue-grey"><%= t %></h3><% end %>
+      <% end %>
+      <% if t == "Développement" %>
+        <%= link_to tagged_path(tag: t) do %><h3 class="purple"><%= t %></h3><% end %>
+      <% end %>
+      <% if t == "Environnement" %>
+        <%= link_to tagged_path(tag: t) do %><h3 class="green"><%= t %></h3><% end %>
+      <% end %>
+    <% end %>
+  </div>
+</div>
