--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,6 @@
 <div class="nav-container">
-  <h1 class="header text-align-center">Quentin Orhant</h1>
-  <p class="p-highlight text-align-center">Maker et développeur freelance</p>
+  <%= link_to tagged_path do %>
+    <h1 class="header text-align-center">Quentin Orhant</h1>
+    <p class="p-highlight text-align-center">Maker et développeur freelance</p>
+  <% end %>
 </div>
