--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -1,17 +1,29 @@
 p, a, label, input, legend{
   font-family: $body-font;
+  text-decoration: none;
 }
 
 h1, h2, h3 {
   font-family: $headers-font;
+  text-decoration: none;
 }
 
 .p-highlight {
+  font-family: $body-font;
   font-size: 19px;
   margin-block-start: 0em;
   margin-block-end: 0em;
+  text-decoration: none;
+  color: black;
 }
 
 .text-align-center {
   text-align: center;
+}
+
+.tag {
+  font-family: $headers-font;
+  text-decoration: none;
+  font-size: 20px;
+  text-transform: uppercase;
 }
