--- a/app/views/shared/_gradient-bar.erb
+++ b/app/views/shared/_gradient-bar.erb
@@ -1,8 +1,29 @@
-<div class="gradient-bar" >
-  <div class="gradient-w-b"></div>
-  <div class="gradient-b-y"></div>
-  <div class="gradient-y-bg"></div>
-  <div class="gradient-bg-p"></div>
-  <div class="gradient-p-g"></div>
-  <div class="gradient-g-w"></div>
+<div class="sticky-container">
+  <div data-controller="opacity">
+    <div class="tags-data" data-opacity-target="tags">
+      <% if params[:tag].present? %>
+        <%= params[:tag] %>
+      <% elsif @post %>
+        <% @post.tag_list.each do |t| %>
+          <%= t %>
+        <% end %>
+      <% else %>
+        Fabrication Photographie Graphisme Développement Environnement
+      <% end %>
+    </div>
+    <div class="gradient-titles">
+      <%= link_to "fabrication", tagged_path(tag: "Fabrication"), :class => "blue tag popup", data: {opacity_target: "fabText"} %>
+      <%= link_to "photographie", tagged_path(tag: "Photographie"), :class => "yellow tag popup", data: {opacity_target: "photoText"} %>
+      <%= link_to "graphisme", tagged_path(tag: "Graphisme"), :class => "blue-grey tag popup", data: {opacity_target: "graphText"} %>
+      <%= link_to "developpement", tagged_path(tag: "Développement"), :class => "purple tag popup", data: {opacity_target: "devText"} %>
+      <%= link_to "environnement", tagged_path(tag: "Environnement"), :class => "green tag popup", data: {opacity_target: "envText"} %>
+    </div>
+    <div class="gradient-bar">
+      <div class="gradient-5 gradient-b" data-opacity-target="fabColor"></div>
+      <div class="gradient-5 gradient-y" data-opacity-target="photoColor"></div>
+      <div class="gradient-5 gradient-bg" data-opacity-target="graphColor"></div>
+      <div class="gradient-5 gradient-p" data-opacity-target="devColor"></div>
+      <div class="gradient-5 gradient-g" data-opacity-target="envColor"></div>
+    </div>
+  </div>
 </div>
