--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,4 +6,7 @@
 @import "gradient-bar";
 @import "container";
 @import "card";
-@import "tagbar"
+@import "tagbar";
+@import "simpleform";
+@import "delete-img";
+@import "buttons"
