--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,11 +13,19 @@
   background-repeat: no-repeat;
   background-size: 300px;
   background-position: center;
+  -webkit-filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
+  filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
 }
 
 .nav-container {
-  height: 190px;
+  height: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.buttons-container {
+  position: absolute;
+  right: 5%;
+  top: 15px;
 }
