--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,10 +13,53 @@
   object-fit:cover;
   width: 100%;
   height: 100%;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+}
+
+.delete-icon {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
+}
+
+.delete-img-card {
+  position: relative;
+  width: fit-content;
+  margin-right: 10px;
+}
+
+.card-add-post {
+  object-fit:cover;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(245, 245, 245);
+  border-radius: 5px;
+  // border: 1px solid black;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+}
+
+.card-edit{
+  height: 21px;
+  padding-top: 3px !important;
+  width: 33px;
+  display: block;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.card-edit:hover {
+  background-color: rgb(245, 245, 245);
 }
 
 .card-tag a {
   text-decoration: none;
+  -webkit-filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
+  filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
 }
 
 .card-box {
