--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -2,3 +2,43 @@
   width: 1200px;
   margin: 0 auto;
 }
+
+.sticky-container {
+  position: sticky;
+  background-color: white;
+  top: 0px;
+  z-index: 10;
+}
+
+.container-8 {
+  width: 900px;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(auto, auto);
+}
+
+.g-1-4 {
+  grid-column: 1 / 4;
+}
+
+.g-1-5 {
+  grid-column: 1 / 5;
+}
+
+
+.g-4-9 {
+  grid-column: 4 / 9;
+}
+
+.g-5-9 {
+  grid-column: 5 / 9;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+}
