--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -1,20 +1,81 @@
+body {
+  margin: 0px;
+}
+
 p, a, label, input, legend{
   font-family: $body-font;
   text-decoration: none;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
 }
 
-h1, h2, h3 {
+h1, h2, h3, label {
   font-family: $headers-font;
   text-decoration: none;
 }
 
+h2, h3 {
+  text-transform: uppercase;
+}
+
+.list {
+  font-family: $headers-font;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 33px;
+  letter-spacing: 0.12em;
+}
+
+h2 {
+  margin-top: 0;
+  margin-block-end: 0.5em;
+}
+
+h3 {
+  margin-block-end: 0;
+  margin-top: 21px
+}
+
+h3, label {
+  font-size: 18px;
+}
+
+a {
+  font-size: 14px;
+  color: $red;
+}
+
+p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  margin-top: 5px;
+  line-height: 27px;
+  letter-spacing: 0.12em;
+}
+
+
 .p-highlight {
   font-family: $body-font;
-  font-size: 19px;
+  font-weight: 600;
+  font-size: 15px;
   margin-block-start: 0em;
   margin-block-end: 0em;
   text-decoration: none;
   color: black;
+}
+
+.p-header {
+  font-family: $body-font;
+  font-weight: 400;
+  font-size: 18px;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  text-decoration: none;
+  color: black;
+  -webkit-filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
+  filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
 }
 
 .text-align-center {
@@ -26,4 +87,49 @@ h1, h2, h3 {
   text-decoration: none;
   font-size: 20px;
   text-transform: uppercase;
+}
+
+.display-none {
+  display: none;
+}
+
+abbr {
+  display: none;
+}
+
+.edit-container {
+  margin-top: 30px;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.red {
+  color: $red;
+}
+
+.sign-up-container {
+  width: 300px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.display-flex {
+  display: flex;
+}
+
+label {
+  line-height: 25px;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.spacer {
+  height: 70px;
+}
+
+.footer {
+  height: 100px;
 }
