--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,34 +1,40 @@
 <div class="card-container">
+  <% if current_user %>
+    <%= link_to new_post_path do %>
+      <%= image_tag "add.png", class: "card-add-post" %>
+    <% end %>
+  <% end %>
   <% @posts.each do |p| %>
     <div class="card-box">
       <%= link_to post_path(p) do %>
-        <div>
-          <%= cl_image_tag p.photos.first.key, class: "card-img" %>
-        </div>
-        <ul class="card-tags-list">
-          <% p.tag_list.each do |tag| %>
-            <li class="card-tag">
-              <%= link_to tagged_path(tag: tag) do %>
-                <% if tag == "Fabrication" %>
-                  <%= image_tag "fab.png" %>
-                <% end %>
-                <% if tag == "Photographie" %>
-                  <%= image_tag "photo.png" %>
-                <% end %>
-                <% if tag == "Développement" %>
-                  <%= image_tag "dev.png" %>
-                <% end %>
-                <% if tag == "Graphisme" %>
-                  <%= image_tag "graph.png" %>
-                <% end %>
-                <% if tag == "Environnement" %>
-                  <%= image_tag "eco.png" %>
-                <% end %>
-              <% end %>
-            </li>
-          <% end %>
-        </ul>
+        <%= cl_image_tag p.photos.first.key, class: "card-img" %>
       <% end %>
+      <% if current_user %>
+        <%= link_to "Edit", edit_post_path(p), class: "card-edit button" %>
+      <% end %>
+      <ul class="card-tags-list">
+        <% p.tag_list.each do |tag| %>
+          <li class="card-tag">
+            <%= link_to tagged_path(tag: tag) do %>
+              <% if tag == "Fabrication" %>
+                <%= image_tag "fab.png" %>
+              <% end %>
+              <% if tag == "Photographie" %>
+                <%= image_tag "photo.png" %>
+              <% end %>
+              <% if tag == "Développement" %>
+                <%= image_tag "dev.png" %>
+              <% end %>
+              <% if tag == "Graphisme" %>
+                <%= image_tag "graph.png" %>
+              <% end %>
+              <% if tag == "Environnement" %>
+                <%= image_tag "env.png" %>
+              <% end %>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
     </div>
   <% end %>
 </div>
