--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,12 @@
 <div class="nav-container">
   <%= link_to tagged_path do %>
     <h1 class="header text-align-center">Quentin Orhant</h1>
-    <p class="p-highlight text-align-center">Maker et développeur freelance</p>
+    <p class="p-header text-align-center">Maker et développeur freelance</p>
   <% end %>
+  <div class="buttons-container">
+    <% if current_user %>
+      <%= link_to "Log out", destroy_user_session_path, class: "button", data: {turbo_method: :delete} %>
+    <% end %>
+    <%= link_to "Contact", contact_path, class: "button" %>
+  </div>
 </div>
