--- a/app/assets/stylesheets/components/_simpleform.scss
+++ b/app/assets/stylesheets/components/_simpleform.scss
@@ -3,6 +3,19 @@
   margin-bottom: 20px;
 }
 
+.edit-container {
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+}
+
+@media (min-width: 1000px) {
+  .edit-container {
+    width: 900px;
+  }
+}
+
 .file input {
   width: 100%;
   margin-bottom: 5px;
