--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<div class = "" >
+<div class = "edit-container" >
   <h1 class = "text-center">New Post</h1>
   <%= simple_form_for @post do |f| %>
     <%= f.input :title %>
