continue responsiv design

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,6 +1,15 @@
 .container {
   padding-left: 70px;
   padding-right: 18px;
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
+}
+
+@media (min-width: 1000px) {
+  .container {
+    width: 900px;
+  }
 }
 
 .sticky-container {
@@ -11,31 +20,50 @@
 }
 
 .container-8 {
-  width: 900px;
-  margin-top: 50px;
+  width: auto;
   margin-left: auto;
   margin-right: auto;
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(auto, auto);
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+}
+
+@media (min-width: 600px) {
+  .container-8 {
+    width: 500px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .container-8 {
+    width: auto;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: minmax(auto, auto);
+    text-align: left;
+  }
 }
 
 .g-1-4 {
   grid-column: 1 / 4;
+  text-align: left;
 }
 
 .g-1-5 {
   grid-column: 1 / 5;
+  text-align: left;
 }
 
 
 .g-4-9 {
   grid-column: 4 / 9;
+  text-align: left;
 }
 
 .g-5-9 {
   grid-column: 5 / 9;
+  text-align: left;
 }
 
 .flex {
