--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,10 +3,9 @@
 @import "avatar";
 @import "navbar";
 @import "general";
-@import "gradient-bar";
+@import "tags-bar";
 @import "container";
 @import "card";
-@import "tagbar";
 @import "simpleform";
 @import "delete-img";
 @import "buttons"
