--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -32,9 +32,10 @@
     <p class="list">Rennes Métropole</p>
     <div class="spacer"></div>
     <h2 class="red" >Langages et logiciels</h2>
-    <%= image_tag "icons.png", class: "", width: "80%" %>
+    <%= image_tag "icons.png", class: "icons-logiciels"%>
   </div>
   <div class="g-4-9">
+    <div class="spacer"></div>
     <h2 class="red" >Résumé</h2>
     <p>Passionné par les low-tech. Poussé par les collaborations interdisciplinaires. Inspiré par le contraste entre la Nature et la société moderne.</p>
     <div class="spacer"></div>
@@ -50,7 +51,7 @@
     <h3>Animateur / médiateur scientifique</h3>
     <p>Animation et accompagnement des groupes et du grand public à L’Espace des sciences de Rennes.</p>
     <p class="p-highlight">2011 - 2013</p>
-    <div class="spacer"></div>
+    <div class="spacer-last"></div>
     <h2 class="red" >Message</h2>
     <%= form_for @contact do |f| %>
       <div class= "contact-form">
