--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -26,3 +26,15 @@ textarea#contact_message.contact-form-text-area {
   // display: flex;
   // margin: auto;
 }
+
+.icons-logiciels {
+  width: 100%;
+  margin-top: 20px;
+}
+
+
+@media (min-width: 600px) {
+  .icons-logiciels {
+    width: 510px;
+  }
+}
