change label form

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -56,7 +56,7 @@
     <%= form_for @contact do |f| %>
       <div class= "contact-form">
         <div class="g-1-4">
-          <%= f.label :name, "Prénom Nom" %></br>
+          <%= f.label :name, "Prénom" %></br>
           <%= f.text_field  :name, required: true, class: "contact-form-text-area" %></br>
         </div>
         <div class="g-4-9">
