--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,24 +1,50 @@
 .header {
-  margin-block-start: 0em;
+  margin-block-start: 65px;
   margin-block-end: 0em;
   text-transform: uppercase;
   font-family: 'Josefin Sans';
   font-style: normal;
   font-weight: 500;
-  font-size: 28px;
-  padding-top: 9px;
   color: white;
   height: 30px;
   background-image: url("vector.png");
   background-repeat: no-repeat;
-  background-size: 300px;
   background-position: center;
+  -webkit-filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
+  filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
+  font-size: 20px;
+  background-size: 230px;
+  padding-top: 14px;
+}
+
+@media (min-width: 1000px) {
+  .header {
+    font-size: 24px;
+    background-size: 280px;
+    padding-top: 9px;
+  }
+}
+
+.p-header {
+  font-family: $body-font;
+  font-weight: 400;
+  font-size: 14px;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  text-decoration: none;
+  color: black;
   -webkit-filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
   filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
 }
 
+@media (min-width: 1000px) {
+  .p-header {
+    font-size: 18px;
+  }
+}
+
 .nav-container {
-  height: 100px;
+  height: 130px;
   display: flex;
   flex-direction: column;
   justify-content: center;
