--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <%= render "shared/tagsbar" %>
     <div class="container">
       <%= render "shared/navbar" %>
+      <%= render "shared/tagsline" %>
       <%= render "shared/flashes" %>
       <%= yield %>
       <div class="footer"></div>
