--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,16 +1,37 @@
 .container {
-  padding-left: 70px;
-  padding-right: 24px;
+  padding-left: 80px;
+  padding-right: 34px;
   margin-left: auto;
   margin-right: auto;
   width: auto;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 600px) {
   .container {
-    width: 900px;
+    width: 500px;
   }
 }
+
+@media (min-width: 900px) {
+  .container {
+    width: 800px;
+  }
+}
+
+@media (min-width: 1300px) {
+  .container {
+    width: 1150px;
+  }
+}
+
+
+// @media (min-width: 1300px) {
+//   .container {
+//     width: 1150px;
+//   }
+// }
+
+
 
 .sticky-container {
   position: sticky;
