add reponsive size at 1600px

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -18,6 +18,12 @@
   }
 }
 
+@media (min-width: 1700px) {
+  .card-container {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
 .card-add-post {
   object-fit:cover;
   width: 100%;
