--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -24,6 +24,13 @@
   }
 }
 
+@media (min-width: 1700px) {
+  .container {
+    width: 1500px;
+  }
+}
+
+
 
 // @media (min-width: 1300px) {
 //   .container {
