--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,11 +6,10 @@
   </div>
   <div class="g-5-9 show-fix">
     <h1><%= @post.title %></h1>
-    <% if @post.source %>
-      <h3>Description</h3>
+    <% if @post.description.present? %>
       <p><%= @post.description %></p>
     <% end %>
-    <% if @post.source %>
+    <% if @post.source.present? %>
       <h3>Source</h3>
       <%= link_to @post.source do %>
         <p><%= @post.source %></p>
