--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -6,17 +6,19 @@
   width: auto;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 700px) {
   .container {
-    width: 400px;
+    width: auto;
+    margin-left: 120px;
+    margin-right: 120px;
   }
 }
 
 @media (min-width: 992px) {
   .container {
     width: auto;
-    margin-left: 120px;
-    margin-right: 120px;
+    margin-left: 160px;
+    margin-right: 160px;
   }
 }
 
@@ -85,7 +87,7 @@
 }
 
 .g-1-5 {
-  grid-column: 1 / 5;
+  grid-column: 1 / 6;
   text-align: left;
 }
 
@@ -96,7 +98,7 @@
 }
 
 .g-5-9 {
-  grid-column: 5 / 9;
+  grid-column: 6 / 9;
   text-align: left;
 }
 
