--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -61,7 +61,7 @@
         </div>
         <div class="g-4-9">
           <%= f.label :email %></br>
-          <%= f.text_field :email, required: true, class: "contact-form-text-area" %></br>
+          <%= f.email_field :email, required: true, class: "contact-form-text-area" %></br>
         </div>
       </div>
       <br>
