--- a/app/assets/stylesheets/components/_tags-bar.scss
+++ b/app/assets/stylesheets/components/_tags-bar.scss
@@ -39,33 +39,28 @@
   display: block;
 }
 .icon:hover {
-  z-index: 30;
+  z-index: 20;
 }
 
 .fab-icon {
   background-image: image-url("fab3.png");
   background-size: 40px;
-  // transition: 0.2s ease;
 }
 .photo-icon {
   background-image: image-url("photo3.png");
   background-size: 40px;
-  // transition: 0.2s ease;
 }
 .graph-icon {
   background-image: image-url("graph3.png");
   background-size: 40px;
-  // transition: 0.2s ease;
 }
 .dev-icon {
   background-image: image-url("dev3.png");
   background-size: 40px;
-  // transition: 0.2s ease;
 }
 .env-icon {
   background-image: image-url("env3.png");
   background-size: 40px;
-  // transition: 0.2s ease;
 }
 
 .fab-icon:hover {
@@ -136,16 +131,15 @@
 
 .tag-title {
   padding-left: 10px;
-  display: none;
+  display: inline;
   font-size: 16px;
   opacity: 0%;
   margin-top: 3px;
-  transition: opacity 1s linear;
+  transition: all 1s linear;
 }
 
 @media (min-width: 992px) {
   .icon:hover + .tag-title {
     opacity: 60%;
-    display: inline;
   }
 }
