--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,19 +18,19 @@
           <li class="card-tag">
             <%= link_to tagged_path(tag: tag) do %>
               <% if tag == "Fabrication" %>
-                <%= image_tag "fab.png" %>
+                <%= image_tag "fab4.png", class: "card-tags-img" %>
               <% end %>
               <% if tag == "Photographie" %>
-                <%= image_tag "photo.png" %>
+                <%= image_tag "photo4.png", class: "card-tags-img"  %>
               <% end %>
               <% if tag == "Développement" %>
-                <%= image_tag "dev.png" %>
+                <%= image_tag "dev4.png", class: "card-tags-img"  %>
               <% end %>
               <% if tag == "Graphisme" %>
-                <%= image_tag "graph.png" %>
+                <%= image_tag "graph4.png", class: "card-tags-img"  %>
               <% end %>
               <% if tag == "Environnement" %>
-                <%= image_tag "env.png" %>
+                <%= image_tag "env4.png", class: "card-tags-img"  %>
               <% end %>
             <% end %>
           </li>
