--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -42,6 +42,10 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
+.card-tags-img {
+  width: 80%;
+}
+
 .card-add-post:hover {
   background-color: rgb(250, 250, 250);
 }
@@ -91,6 +95,6 @@
   padding: 0;
   text-align: left;
   position: absolute;
-  left: -25px;
-  top: -25px;
+  left: -20px;
+  top: -20px;
 }
