--- a/app/assets/stylesheets/components/_tags-bar.scss
+++ b/app/assets/stylesheets/components/_tags-bar.scss
@@ -43,23 +43,23 @@
 }
 
 .fab-icon {
-  background-image: image-url("fab3.png");
+  background-image: image-url("fab4.png");
   background-size: 40px;
 }
 .photo-icon {
-  background-image: image-url("photo3.png");
+  background-image: image-url("photo4.png");
   background-size: 40px;
 }
 .graph-icon {
-  background-image: image-url("graph3.png");
+  background-image: image-url("graph4.png");
   background-size: 40px;
 }
 .dev-icon {
-  background-image: image-url("dev3.png");
+  background-image: image-url("dev4.png");
   background-size: 40px;
 }
 .env-icon {
-  background-image: image-url("env3.png");
+  background-image: image-url("env4.png");
   background-size: 40px;
 }
 
@@ -131,12 +131,19 @@
 
 .tag-title {
   padding-left: 10px;
-  display: inline;
+  display: none;
   font-size: 16px;
   opacity: 0%;
   margin-top: 3px;
   transition: all 1s linear;
 }
+
+@media (min-width: 992px) {
+  .tag-title {
+    display: inline;
+  }
+}
+
 
 @media (min-width: 992px) {
   .icon:hover + .tag-title {
