--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -43,7 +43,7 @@
 }
 
 .card-tags-img {
-  width: 50%;
+  width: 40px;
 }
 
 .card-add-post:hover {
@@ -95,6 +95,6 @@
   padding: 0;
   text-align: left;
   position: absolute;
-  left: -25px;
-  top: -25px;
+  left: -20px;
+  top: -20px;
 }
