--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,29 +13,29 @@
       <% if current_user %>
         <%= link_to "Edit", edit_post_path(p), class: "card-edit button" %>
       <% end %>
-      <ul class="card-tags-list">
+      <div class="card-tags-list">
         <% p.tag_list.each do |tag| %>
-          <li class="card-tag">
-            <%= link_to tagged_path(tag: tag) do %>
+          <%= link_to tagged_path(tag: tag) do %>
+            <div class="card-tag">
               <% if tag == "Fabrication" %>
-                <%= image_tag "fab4.png", class: "card-tags-img" %>
+                <%= image_tag "fab1.png", class: "card-tags-img" %>
               <% end %>
               <% if tag == "Photographie" %>
-                <%= image_tag "photo4.png", class: "card-tags-img"  %>
+                <%= image_tag "photo1.png", class: "card-tags-img"  %>
               <% end %>
               <% if tag == "Développement" %>
-                <%= image_tag "dev4.png", class: "card-tags-img"  %>
+                <%= image_tag "dev1.png", class: "card-tags-img"  %>
               <% end %>
               <% if tag == "Graphisme" %>
-                <%= image_tag "graph4.png", class: "card-tags-img"  %>
+                <%= image_tag "graph1.png", class: "card-tags-img"  %>
               <% end %>
               <% if tag == "Environnement" %>
-                <%= image_tag "env4.png", class: "card-tags-img"  %>
+                <%= image_tag "env1.png", class: "card-tags-img"  %>
               <% end %>
-            <% end %>
-          </li>
+            </div>
+          <% end %>
         <% end %>
-      </ul>
+      </div>
     </div>
   <% end %>
 </div>
