--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -6,37 +6,37 @@
   width: auto;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 768px) {
   .container {
     width: auto;
-    margin-left: 120px;
-    margin-right: 120px;
+    margin-left: 140px;
+    margin-right: 140px;
   }
 }
 
-@media (min-width: 992px) {
-  .container {
-    width: auto;
-    margin-left: 160px;
-    margin-right: 160px;
-  }
-}
+// @media (min-width: 992px) {
+//   .container {
+//     width: auto;
+//     margin-left: 160px;
+//     margin-right: 160px;
+//   }
+// }
 
 @media (min-width: 1200px) {
   .container {
     width: auto;
-    margin-left: 160px;
-    margin-right: 160px;
+    margin-left: 140px;
+    margin-right: 140px;
   }
 }
 
-@media (min-width: 1400px) {
-  .container {
-    width: auto;
-    margin-left: 160px;
-    margin-right: 160px;
-  }
-}
+// @media (min-width: 1400px) {
+//   .container {
+//     width: auto;
+//     margin-left: 160px;
+//     margin-right: 160px;
+//   }
+// }
 
 
 
@@ -64,13 +64,13 @@
   flex-direction: column;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 768px) {
   .container-8 {
-    width: 500px;
+    width: 100%;
   }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1200px) {
   .container-8 {
     width: auto;
     display: grid;
