--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,11 @@
+.header-p-header {
+  margin-left: 44px;
+}
+
 .header {
-  margin-block-start: 16px;
-  margin-block-end: 0em;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  margin-top: 52px;
   text-transform: uppercase;
   font-family: 'Josefin Sans';
   font-style: normal;
@@ -12,18 +17,18 @@
   background-position: center;
   -webkit-filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
   filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
-  font-size: 20px;
+  font-size: 21px;
   background-size: 230px;
-  padding-top: 14px;
+  padding-top: 15px;
 }
 
-@media (min-width: 992px) {
-  .header {
-    font-size: 24px;
-    background-size: 280px;
-    padding-top: 12px;
-  }
-}
+// @media (min-width: 992px) {
+//   .header {
+//     font-size: 24px;
+//     background-size: 280px;
+//     padding-top: 12px;
+//   }
+// }
 
 .p-header {
   font-family: $body-font;
@@ -31,23 +36,26 @@
   font-size: 16px;
   margin-block-start: 0em;
   margin-block-end: 0em;
+  padding-bottom: 22px;
   text-decoration: none;
   color: black;
   -webkit-filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
   filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.2));
 }
 
-@media (min-width: 992px) {
-  .p-header {
-    font-size: 18px;
-  }
-}
+// @media (min-width: 992px) {
+//   .p-header {
+//     font-size: 18px;
+//   }
+// }
 
 .nav-container {
-  height: 170px;
+  justify-content: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // position: sticky;
+  top: 0;
+  background: white;
 }
 
 .buttons-container {
