--- a/app/assets/stylesheets/components/_tags-bar.scss
+++ b/app/assets/stylesheets/components/_tags-bar.scss
@@ -18,6 +18,7 @@
   position: sticky;
   top: 0px;
   left : 0px;
+  z-index: 2;
 }
 
 .gradient-titles {
@@ -43,78 +44,78 @@
 }
 
 .fab-icon {
-  background-image: image-url("fab3.png");
+  background-image: image-url("fab1.png");
   background-size: 40px;
 }
 .photo-icon {
-  background-image: image-url("photo3.png");
+  background-image: image-url("photo1.png");
   background-size: 40px;
 }
 .graph-icon {
-  background-image: image-url("graph3.png");
+  background-image: image-url("graph1.png");
   background-size: 40px;
 }
 .dev-icon {
-  background-image: image-url("dev3.png");
+  background-image: image-url("dev1.png");
   background-size: 40px;
 }
 .env-icon {
-  background-image: image-url("env3.png");
+  background-image: image-url("env1.png");
   background-size: 40px;
 }
 
 .fab-icon:hover {
-  background-image: image-url("fab5.png");
+  background-image: image-url("fab2.png");
   background-size: 40px;
   background-color: $blue;
 }
 .photo-icon:hover {
-  background-image: image-url("photo5.png");
+  background-image: image-url("photo2.png");
   background-size: 40px;
   background-color: $yellow;
 }
 .graph-icon:hover {
-  background-image: image-url("graph5.png");
+  background-image: image-url("graph2.png");
   background-size: 40px;
   background-color: $blue-grey;
 }
 .dev-icon:hover {
-  background-image: image-url("dev5.png");
+  background-image: image-url("dev2.png");
   background-size: 40px;
   background-color: $purple;
 }
 .env-icon:hover {
-  background-image: image-url("env5.png");
+  background-image: image-url("env2.png");
   background-size: 40px;
   background-color: $green;
 }
 
 .fab-icon-2 {
-  background-image: image-url("fab5.png");
+  background-image: image-url("fab2.png");
   background-size: 40px;
   background-color: $blue;
   z-index: 20;
 }
 .photo-icon-2 {
-  background-image: image-url("photo5.png");
+  background-image: image-url("photo2.png");
   background-size: 40px;
   background-color: $yellow;
   z-index: 20;
 }
 .graph-icon-2 {
-  background-image: image-url("graph5.png");
+  background-image: image-url("graph2.png");
   background-size: 40px;
   background-color: $blue-grey;
   z-index: 20;
 }
 .dev-icon-2 {
-  background-image: image-url("dev5.png");
+  background-image: image-url("dev2.png");
   background-size: 40px;
   background-color: $purple;
   z-index: 20;
 }
 .env-icon-2 {
-  background-image: image-url("env5.png");
+  background-image: image-url("env2.png");
   background-size: 40px;
   background-color: $green;
   z-index: 20;
@@ -138,14 +139,14 @@
   transition: all 1s linear;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .tag-title {
     display: inline;
   }
 }
 
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .icon:hover + .tag-title {
     opacity: 60%;
   }
