--- a/app/assets/stylesheets/components/_tagsline.scss
+++ b/app/assets/stylesheets/components/_tagsline.scss
@@ -1,13 +1,16 @@
 .tags-line {
   text-align: center;
+  margin-left: 64px;
+  margin-right: 20px;
 }
 
 .tag-line {
   color: white;
   display: inline-block;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 8px;
+  padding-left: 14px;
+  padding-right: 14px;
+  padding-top: 9px;
+  padding-bottom: 3px;
   margin-top: 0px;
   margin-bottom: 13px;
   height: 20px;
